# ConstraintDesign-wb

./: AssemblyContainer.py  CMakeLists.txt  DesignWorkbench.py  GuiUtils.py  Init.py  InitGui.py  PartContainer.py  README.md  Utils.py  build-mojo.sh  locater.py  package.xml
.openhands/: TASKS.md
Cache/: DocumentCacheManager.py
Commands/: AddVarset.py  ConstraintsCommands.py  CreateChamfer.py  CreateConstraintLink.py  CreateCountersink.py  CreateDerive.py  CreateExposedGeo.py  CreateExtrusion.py  CreateFillet.py  CreateJoint.py  CreateLinearPattern.py  CreateLoft.py  CreatePartContainer.py  CreatePartMirror.py  CreateSketch.py  EditSketchPlacement.py  MoveFeatureCommands.py  SketchUtils.py  UpdateSketchVisibility.py
ConstraintDesignMojo/: cdecl-test.mojo  mojo_module.mojo  pixi.toml  test1.py
Entities/: BoundarySketch.py  ConstraintGroup.py  ConstraintSketch.py  DatumPlane.py  Derive.py  Dressup.py  Entity.py  ExposedGeo.py  Extrusion.py  Feature.py  FeatureCopy.py  Fillet.py  GuiConstraint.py  Joint.py  Loft.py  PartMirror.py  Pattern.py
Examples/DominoToy/: AnimationMacro.py  Assembly.20250901-211859.FCBak  Assembly.20250902-175322.FCBak  Assembly.20250902-175332.FCBak  Assembly.20250902-213141.FCBak  Assembly.20250902-213152.FCBak  Assembly.20250903-000818.FCBak  Assembly.20250903-001013.FCBak  Assembly.20250903-175030.FCBak  Assembly.20250903-175036.FCBak  Assembly.20250903-221535.FCBak  Assembly.20250903-221545.FCBak  Assembly.20250904-112720.FCBak  Assembly.20250904-113111.FCBak  Assembly.FCStd  Base.20250901-225248.FCBak  Base.20250901-225315.FCBak  Base.20250902-171736.FCBak  Base.20250902-171900.FCBak  Base.20250902-212746.FCBak  Base.20250902-212948.FCBak  Base.20250902-224731.FCBak  Base.20250902-231219.FCBak  Base.20250903-221434.FCBak  Base.20250903-221608.FCBak  Base.20250904-104025.FCBak  Base.20250904-104100.FCBak  Base.FCStd  LinkageBar.20250903-174940.FCBak  LinkageBar.20250903-174949.FCBak  LinkageBar.FCStd  PushArm.20250904-111349.FCBak  PushArm.20250904-111455.FCBak  PushArm.FCStd  Stand.20250901-225513.FCBak  Stand.20250901-225538.FCBak  Stand.20250902-112930.FCBak  Stand.20250902-112939.FCBak  Stand.FCStd  SweeperArm.20250902-225950.FCBak  (+4 more)
Grid/: GridManager.py
SolverSystem/: SolvableEntity.py
SolverSystem/InternalConstraints/: InternalCoincident.py  InternalConstraint.py
SolverSystem/InternalEntities/: Plane.py
Utils/: Constants.py  GeometryUtils.py  GuiUtils.py  MojoUtils.py  Preferences.py  SketchUtils.py  Utils.py
src/: Init.py  InitGui.py  MyCommand.py  MyModule.py
tests/: test_units_properties.py
